@@ -3,6 +3,9 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/)
 
 ## [Unreleased]
 
+### Changed
+- 결제검증 데몬로그에 `[verify]` prefix 를 붙임 (#181)
+
 ## [v0.1.8] - Mon, 05 Feb 2018 21:30:39 +0900
 
 ### Added
